--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -6,7 +6,7 @@
     <meta name="keywords" content="SaaS"/>
     <meta name="description" content="SaaS"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-    <title>余白</title>
+    <title>瞰外</title>
     <link rel="icon" href="<%= context.config.publicPath + 'favicon.ico' %>" type="image/x-icon"/>
 
     <style>
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div style="display: flex; align-items: center; justify-content: center">
-            余白
+            余白综合管理系统
         </div>
     </div>
 </div>
