--- a/src/components/RightContent/index.less
+++ b/src/components/RightContent/index.less
@@ -3,7 +3,7 @@
 @pro-header-hover-bg: rgba(0, 0, 0, 0.025);
 
 .menu {
-  :global(.anticon) {
+  :global(.action) {
     margin-right: 8px;
   }
   :global(.ant-dropdown-menu-item) {
